added the site homepage messages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
                 <li><a href="#"><img src="css/assets/logo/shop.png"></a></li>
             </ul>
         </nav>
-        <section class="sec1"></section>
+        <section class="sec1">
+            <p id="slogan">Our clothing, your comfort</p>
+            <p id="detailed-slogan">We understand that you need to look good and feel great <br> 
+                It all starts with what you are wearing.</p>
+        </section>
         <section class="sec2"></section>
         
     </body>
