--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <script src="js/script.js"></script>
     </head>
     <body>
+
+ <!-- ________________________________homepage code _______________________________-->
+
         <nav>
             <div class="logo">
                 <img src="css/assets/logo/logo.png">
@@ -27,8 +30,25 @@
             <p id="slogan">Our clothing, your comfort</p>
             <p id="detailed-slogan">We understand that you need to look good and feel great <br> 
                 It all starts with what you are wearing.</p>
+            <a href="#section2"><img class="home-pointer" src="css/assets/mouse_click.png"></a>
         </section>
-        <section class="sec2"></section>
+
+ <!-- _____________________________Category section_________________________________ -->
+
+
+        <section class="sec2" id="section2">
+            <div id="categories">
+                <input type="checkbox" name="Men" value="Men" checked> Men
+                <input type="checkbox" name="Women" value="Women" checked> Women
+                <input type="checkbox" name="Children" value="Children"> Children
+                <button class="category-button">See All Products</button>
+            </div>
+        </section>
+
+<!--_______________________________  Shopping section_______________________________-->
         
+        <section>
+
+        </section>
     </body>
 </html>
