--- a/index.html
+++ b/index.html
@@ -47,8 +47,20 @@
 
 <!--_______________________________  Shopping section_______________________________-->
         
-        <section>
-
+        <section class="sec3">
+            <h3><span>Men</span> </h3>
         </section>
+
+
+        <script type="text/javascript">
+            $(window).on('scroll', function(){
+                if ($(window).scrollTop()){
+                    $('nav').addClass('black');
+                }
+                else{
+                    $('nav').removeClass('black');
+                }
+            })
+        </script>
     </body>
 </html>
