added the male products in a row in the male section category

--- a/index.html
+++ b/index.html
@@ -49,6 +49,43 @@
         
         <section class="sec3">
             <h3><span>Men</span> </h3>
+
+            <div class="row">
+
+                <div class="column">
+                    <h2>
+                        <select>
+                            <option value="number">Size</option>
+                            <option value="cost">Price</option>
+                        </select>
+                    </h2>
+                    <img src="css/assets/products/tshirt.png" height="189" width="122" alt="male T-shirt">
+                    <p class="item-name">T-SHIRT<span class="price-location">5,00€</span></p>
+                </div>
+
+                <div class="column">
+                    <h2>
+                        <select>
+                            <option value="number">Size</option>
+                            <option value="cost">Price</option>
+                        </select>
+                    </h2>
+                    <img src="css/assets/products/pants.png" height="189" width="122" alt="male pant">
+                    <p class="item-name">PANTS FORCLAZ<span class="price-location">30,00€</span></p>
+                </div>
+
+                <div class="column">
+                    <h2>
+                        <select>
+                            <option value="number">Size</option>
+                            <option value="cost">Price</option>
+                        </select>
+                    </h2>
+                    <img src="css/assets/products/backpack.png" height="189" width="122" alt="backpack">
+                    <p class="item-name">BACKPACK<span class="price-location">60,00€</span></p>
+                </div>
+
+            </div>
         </section>
 
 
