apced out sections 2 from 3 and added the color codes for the site

--- a/index.html
+++ b/index.html
@@ -55,9 +55,14 @@
                 <div class="column">
                     <h2>
                         <select>
-                            <option value="number">Size</option>
-                            <option value="cost">Price</option>
+                            <option value="number">SIZE</option>
+                            <option value="cost">PRICE</option>
                         </select>
+                        <div class="dots">
+                            <span id="dot"></span>
+                            <span id="dot1"></span>
+                            <span id="dot2"></span>
+                        </div>
                     </h2>
                     <img src="css/assets/products/tshirt.png" height="189" width="122" alt="male T-shirt">
                     <p class="item-name">T-SHIRT<span class="price-location">5,00€</span></p>
@@ -66,8 +71,8 @@
                 <div class="column">
                     <h2>
                         <select>
-                            <option value="number">Size</option>
-                            <option value="cost">Price</option>
+                            <option value="number">SIZE</option>
+                            <option value="cost">PRICE</option>
                         </select>
                     </h2>
                     <img src="css/assets/products/pants.png" height="189" width="122" alt="male pant">
@@ -77,8 +82,8 @@
                 <div class="column">
                     <h2>
                         <select>
-                            <option value="number">Size</option>
-                            <option value="cost">Price</option>
+                            <option value="number">SIZE</option>
+                            <option value="cost">PRICE</option>
                         </select>
                     </h2>
                     <img src="css/assets/products/backpack.png" height="189" width="122" alt="backpack">
