--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>ui</title>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" ></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" ></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
         <script src="js/script.js"></script>
     </head>
@@ -45,13 +45,15 @@
             </div>
         </section>
 
-<!--_______________________________  Shopping section_______________________________-->
+<!--_______________________________ Male Shopping section items_______________________________-->
         
         <section class="sec3">
-            <h3><span>Men</span> </h3>
-
+            <h3 id="men-category"><span>Men</span></h3>
+            <div class="counter">
+                <span> 1/5 </span><br>
+                <span> <img src="css/assets/logo/scroll.png" height="17"> </span>
+            </div>
             <div class="row">
-
                 <div class="column">
                     <h2>
                         <select>
@@ -91,9 +93,70 @@
                 </div>
 
             </div>
+
+<!--______________________________________ Female Shopping section items________________________________________-->
+
+            <h3 id="women-category"><span>Women</span> </h3>
+            <div class="counter2">
+                <span> 1/5 </span><br>
+                <span> <img src="css/assets/logo/scroll.png" height="17"> </span>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <h2>
+                        <select>
+                            <option value="number">SIZE</option>
+                            <option value="cost">PRICE</option>
+                        </select>
+                    </h2>
+                    <img src="css/assets/products/giacket.png" height="169" width="152" alt="male T-shirt">
+                    <p class="item-name">GIAKET<span class="price-location">60,00€</span></p>
+                </div>
+
+                <div class="column">
+                    <h2>
+                        <select>
+                            <option value="number">SIZE</option>
+                            <option value="cost">PRICE</option>
+                        </select>
+                    </h2>
+                    <img src="css/assets/products/trekkingshoes.png" height="169" width="182" alt="male pant">
+                    <p class="item-name">TREKKING SHOES<span class="price-location">80,00€</span></p>
+                </div>
+
+                <div class="column">
+                    <h2>
+                        <select>
+                            <option value="number">SIZE</option>
+                            <option value="cost">PRICE</option>
+                        </select>
+                        <div class="dots">
+                            <span id="dot3"></span>
+                        </div>
+                    </h2>
+                    <img src="css/assets/products/tshirt_ladies.png" height="169" width="142" alt="backpack">
+                    <p class="item-name">T-SHIRT<span class="price-location">20,00€</span></p>
+                </div>
+
+            </div>
         </section>
+<!--_________________________________________ About Section _______________________________________ -->
 
-
+        <section class="sec4">
+            <fieldset class="about-border">
+                <legend class="about-border">ABOUT</legend>
+                <div class="control-group">
+                    <div class="controls bootstrap-timepicker" id="about-text">
+                        This is where high-fashion clothing is 
+                        designed and crafted from the heart by 
+                        an amazing team of craftmen and
+                        designers who understand what fashion
+                        is.
+                    </div>
+                </div>
+            </fieldset>    
+        </section>
+        
         <script type="text/javascript">
             $(window).on('scroll', function(){
                 if ($(window).scrollTop()){
