--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" ></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <script src="js/script.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
 
@@ -144,7 +144,7 @@
 
         <section class="sec4">
             <fieldset class="about-border">
-                <legend class="about-border">ABOUT</legend>
+                <legend class="about-border">ABOUT US</legend>
                 <div class="control-group">
                     <div class="controls bootstrap-timepicker" id="about-text">
                         This is where high-fashion clothing is 
@@ -156,16 +156,15 @@
                 </div>
             </fieldset>    
         </section>
-        
-        <script type="text/javascript">
-            $(window).on('scroll', function(){
-                if ($(window).scrollTop()){
-                    $('nav').addClass('black');
-                }
-                else{
-                    $('nav').removeClass('black');
-                }
-            })
-        </script>
+
+<!--_________________________________________ Promotion Section _______________________________________ -->
+
+        <section class="sec5"> 
+            <div id="promotion">
+                <img src="css/assets/social_icons/twitter_bird.png" alt="twitter bird"> 
+                "SALE: Buy anything for 45% off.Use the promo CODE YOLOMY45 when you buy the items"
+            </div>
+        </section>
+      
     </body>
 </html>
