added the different add to cart buttons to each item

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                         </div>
                     </h2>
                     <img src="css/assets/products/tshirt.png" height="189" width="122" alt="male T-shirt">
-                    <p class="item-name">T-SHIRT<span class="price-location">5,00€</span></p>
+                    <p class="item-name">T-SHIRT<span class="price-location">$8.00</span></p>
+                    <a id="black_Shirt" href="#0" class="cd-add-to-cart" data-price="8.00">Add To Cart</a>
                 </div>
 
                 <div class="column">
@@ -78,7 +79,8 @@
                         </select>
                     </h2>
                     <img src="css/assets/products/pants.png" height="189" width="122" alt="male pant">
-                    <p class="item-name">PANTS FORCLAZ<span class="price-location">30,00€</span></p>
+                    <p class="item-name">PANTS FORCLAZ<span class="price-location">$30.00</span></p>
+                    <a id="grey_Pants" href="#0" class="cd-add-to-cart" data-price="$30.99">Add To Cart</a>
                 </div>
 
                 <div class="column">
@@ -89,7 +91,8 @@
                         </select>
                     </h2>
                     <img src="css/assets/products/backpack.png" height="189" width="122" alt="backpack">
-                    <p class="item-name">BACKPACK<span class="price-location">60,00€</span></p>
+                    <p class="item-name">BACKPACK<span class="price-location">$60.00</span></p>
+                    <a id="dark_Bag" href="#0" class="cd-add-to-cart" data-price="60.99">Add To Cart</a>
                 </div>
 
             </div>
@@ -109,8 +112,9 @@
                             <option value="cost">PRICE</option>
                         </select>
                     </h2>
-                    <img src="css/assets/products/giacket.png" height="169" width="152" alt="male T-shirt">
-                    <p class="item-name">GIAKET<span class="price-location">60,00€</span></p>
+                    <img src="css/assets/products/giacket.png" height="189" width="152" alt="male T-shirt">
+                    <p class="item-name">GIAKET<span class="price-location">$60.00</span></p>
+                    <a id="green-giaket" href="#0" class="cd-add-to-cart" data-price="60.00">Add To Cart</a>
                 </div>
 
                 <div class="column">
@@ -120,8 +124,9 @@
                             <option value="cost">PRICE</option>
                         </select>
                     </h2>
-                    <img src="css/assets/products/trekkingshoes.png" height="169" width="182" alt="male pant">
-                    <p class="item-name">TREKKING SHOES<span class="price-location">80,00€</span></p>
+                    <img src="css/assets/products/trekkingshoes.png" height="189" width="182" alt="male pant">
+                    <p class="item-name">TREKKING SHOES<span class="price-location">$80.00</span></p>
+                    <a id="hiking-shoe" href="#0" class="cd-add-to-cart" data-price="80.00">Add To Cart</a>
                 </div>
 
                 <div class="column">
@@ -134,8 +139,9 @@
                             <span id="dot3"></span>
                         </div>
                     </h2>
-                    <img src="css/assets/products/tshirt_ladies.png" height="169" width="142" alt="backpack">
+                    <img src="css/assets/products/tshirt_ladies.png" height="189" width="142" alt="backpack">
                     <p class="item-name">T-SHIRT<span class="price-location">20,00€</span></p>
+                    <a id="indigo-female-shirt" href="#0" class="cd-add-to-cart" data-price="80.00">Add To Cart</a>
                 </div>
 
             </div>
@@ -197,5 +203,9 @@
                 <p class="copyright">COPYRIGHT 2015. YOLOMY INC</p>
             </footer>
         </section>
+
+        <!-- ___________________________________CART SECTION ________________________________ -->
+
+        
     </body>
 </html>
