--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" ></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/cart.css"> <!-- Cart Resource styling -->
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
