add the link to the javascript controling the cart functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/cart.css"> <!-- Cart Resource styling -->
         <script type="text/javascript" src="js/script.js"></script>
+        <script type="text/javascript" src="js/cart.js"></script> <!--Cart Functionality Resource jQuery -->
     </head>
     <body>
 
