edited the items prizes to match the functions described details in order to confirm the total calculations

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </h2>
                     <img src="css/assets/products/pants.png" height="189" width="122" alt="male pant">
                     <p class="item-name">PANTS FORCLAZ<span class="price-location">$30.00</span></p>
-                    <a id="grey_Pants" href="#0" class="cd-add-to-cart" data-price="$30.99">Add To Cart</a>
+                    <a id="grey_Pants" href="#0" class="cd-add-to-cart" data-price="30.00">Add To Cart</a>
                 </div>
 
                 <div class="column">
@@ -94,7 +94,7 @@
                     </h2>
                     <img src="css/assets/products/backpack.png" height="189" width="122" alt="backpack">
                     <p class="item-name">BACKPACK<span class="price-location">$60.00</span></p>
-                    <a id="dark_Bag" href="#0" class="cd-add-to-cart" data-price="60.99">Add To Cart</a>
+                    <a id="dark_Bag" href="#0" class="cd-add-to-cart" data-price="60.00">Add To Cart</a>
                 </div>
 
             </div>
@@ -142,8 +142,8 @@
                         </div>
                     </h2>
                     <img src="css/assets/products/tshirt_ladies.png" height="189" width="142" alt="backpack">
-                    <p class="item-name">T-SHIRT<span class="price-location">20,00€</span></p>
-                    <a id="indigo-female-shirt" href="#0" class="cd-add-to-cart" data-price="80.00">Add To Cart</a>
+                    <p class="item-name">T-SHIRT<span class="price-location">$20,00</span></p>
+                    <a id="indigo-female-shirt" href="#0" class="cd-add-to-cart" data-price="20.00">Add To Cart</a>
                 </div>
 
             </div>
